added refresh database function and rate class endpoint +  more validations
